substrate/frame/support/test/tests/pallet_ui/call_feeless_invalid_closure_return.stderr
error: Invalid pallet::call, feeless_if closure must return `bool`
  --> tests/pallet_ui/call_feeless_invalid_closure_return.rs:31:43
   |
31 |         #[pallet::feeless_if(|_: &OriginFor<T>| -> u32 { 0 })]
   |                                                 ^
